feat: update app name to "DeFi" (#658)
* feat: update defi blockchain app

* chore: bump packages

* feat: added notarize step

* chore: add branch

* chore: update permissions

* chore: bump packages

* feat: added link to release notes and licenses

* chore: remove sign

* chore: remove branch build

* fix: password update

* chore: remove unused

--- a/.github/governance.yml
+++ b/.github/governance.yml
@@ -2,7 +2,7 @@ version: v1
 
 issue:
   captures:
-    - regex: '- DeFi App Version: *(.+) *'
+    - regex: '- DeFi Version: *(.+) *'
       github_release: true
       ignore_case: true
       label: 'version/$CAPTURED'
