--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "defi-app",
+  "name": "defi",
   "version": "2.3.2",
   "description": "DeFiChain Blockchain App",
   "main": "./electron-app/build/electron-app/index.js",
@@ -62,7 +62,7 @@
     "electron-log": "^4.3.2",
     "electron-progressbar": "^2.0.0",
     "electron-root-path": "^1.0.16",
-    "electron-updater": "4.3.5",
+    "electron-updater": "4.3.8",
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
     "http-status-codes": "^2.1.4",
@@ -98,7 +98,7 @@
     "concurrently": "6.0.0",
     "cross-env": "7.0.3",
     "electron": "11.3.0",
-    "electron-builder": "22.9.1",
+    "electron-builder": "22.10.5",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "1.0.0",
     "eslint": "^7.22.0",
@@ -114,8 +114,8 @@
     "typescript": "^4.2.3"
   },
   "build": {
-    "productName": "defi-app",
-    "appId": "defi-electron-v1",
+    "productName": "DeFi",
+    "appId": "com.defichain.DeFi",
     "copyright": "Copyright © 2020-2021 ${author}",
     "asar": true,
     "files": [
@@ -123,29 +123,24 @@
       {
         "from": "./webapp/build/release/",
         "to": "./webapp",
-        "filter": [
-          "**/*"
-        ]
+        "filter": ["**/*"]
       }
     ],
     "extraResources": [
       {
         "from": "./binary/",
         "to": "./binary",
-        "filter": [
-          "**/*"
-        ]
+        "filter": ["**/*"]
       },
       {
         "from": "./DO_NOT_SAVE_WALLETS_HERE",
         "to": "../DO_NOT_SAVE_WALLETS_HERE",
-        "filter": [
-          "**/*"
-        ]
+        "filter": ["**/*"]
       }
     ],
     "icon": "electron-app/assets/icon/icon-512.png",
     "dmg": {
+      "sign": false,
       "icon": "electron-app/assets/icon/mac/app.icns",
       "contents": [
         {
@@ -161,9 +156,7 @@
       ]
     },
     "linux": {
-      "target": [
-        "AppImage"
-      ]
+      "target": ["AppImage"]
     },
     "win": {
       "target": "NSIS"
