--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "defi-app",
+  "name": "defi",
   "version": "2.3.2",
   "description": "DeFi Blockchain App",
   "author": {
@@ -62,7 +62,7 @@
     "react-hook-form": "6.15.4",
     "react-icons": "^4.2.0",
     "react-md-spinner": "^1.0.0",
-    "react-number-format": "4.4.4",
+    "react-number-format": "4.5.0",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.2",
     "react-redux-i18n": "^1.9.3",
@@ -108,7 +108,7 @@
     "@types/react-transition-group": "^4.4.1",
     "@types/redux-logger": "^3.0.8",
     "@types/semver": "7.3.4",
-    "@types/zxcvbn": "4.4.0",
+    "@types/zxcvbn": "4.4.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
@@ -119,7 +119,7 @@
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
     "crypto-browserify": "3.12.0",
-    "css-loader": "~5.1.2",
+    "css-loader": "~5.1.3",
     "cssnano": "~4.1.10",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
@@ -166,7 +166,7 @@
     "tsconfig-paths-webpack-plugin": "3.4.1",
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
-    "webpack": "5.25.1",
+    "webpack": "5.26.0",
     "webpack-bundle-analyzer": "~4.4.0",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "^3.11.2",
