--- a/.github/governance.yml
+++ b/.github/governance.yml
@@ -2,7 +2,7 @@ version: v1
 
 issue:
   captures:
-    - regex: '- DeFi Version: *(.+) *'
+    - regex: '- DeFi Wallet Version: *(.+) *'
       github_release: true
       ignore_case: true
       label: 'version/$CAPTURED'
