--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "defi",
+  "name": "defi-wallet",
   "version": "2.3.2",
-  "description": "DeFi Blockchain App",
+  "description": "DeFiChain Blockchain App",
   "author": {
     "name": "DeFiChain Foundation",
     "email": "engineering@defichain.com",
