--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@electron/remote": "1.1.0",
     "7zip-bin": "5.1.1",
     "async": "3.2.0",
     "auto-launch": "^5.0.5",
@@ -60,7 +61,7 @@
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.2.4",
     "electron-debug": "^3.2.0",
-    "electron-log": "^4.3.2",
+    "electron-log": "^4.3.3",
     "electron-progressbar": "^2.0.0",
     "electron-root-path": "^1.0.16",
     "electron-updater": "4.3.8",
@@ -70,7 +71,7 @@
     "ini": "^2.0.0",
     "lodash": "^4.17.21",
     "loglevel": "^1.7.1",
-    "node-disk-info": "1.1.0",
+    "node-disk-info": "1.2.0",
     "os": "^0.1.1",
     "os-name": "4.0.0",
     "prop-types": "^15.7.2",
@@ -87,19 +88,18 @@
     "@types/auto-launch": "^5.0.1",
     "@types/base-64": "^0.1.3",
     "@types/crypto-js": "^4.0.1",
-    "@types/fs-extra": "9.0.7",
     "@types/ini": "^1.3.30",
-    "@types/node": "12.20.4",
+    "@types/node": "14.14.37",
     "@types/random-string": "0.0.28",
     "@types/semver": "7.3.4",
     "@types/utf8": "^2.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
-    "concurrently": "6.0.0",
+    "concurrently": "6.0.1",
     "cross-env": "7.0.3",
-    "electron": "11.3.0",
+    "electron": "12.0.2",
     "electron-builder": "22.10.5",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "1.0.0",
@@ -194,6 +194,6 @@
     }
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   }
 }
