--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,7 +30,7 @@
     }
   },
   "dependencies": {
-    "ajv": "^8.0.5",
+    "ajv": "^8.1.0",
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
@@ -42,7 +42,7 @@
     "crypto-js": "^4.0.0",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.2.4",
-    "electron-log": "^4.3.3",
+    "electron-log": "^4.3.4",
     "http-status-codes": "^2.1.4",
     "is-electron": "^2.2.0",
     "lodash": "^4.17.21",
@@ -59,10 +59,10 @@
     "react-dom": "^17.0.2",
     "react-ellipsis-text": "1.2.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "7.0.4",
+    "react-hook-form": "7.0.5",
     "react-icons": "^4.2.0",
     "react-md-spinner": "^1.0.0",
-    "react-number-format": "4.5.3",
+    "react-number-format": "4.5.5",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.3",
     "react-redux-i18n": "^1.9.3",
@@ -79,15 +79,16 @@
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.13.14",
+    "@babel/core": "~7.13.15",
+    "@babel/eslint-parser": "7.13.14",
     "@babel/plugin-proposal-class-properties": "~7.13.0",
     "@babel/plugin-proposal-export-default-from": "^7.12.13",
     "@babel/plugin-proposal-export-namespace-from": "~7.12.13",
     "@babel/plugin-proposal-object-rest-spread": "~7.13.8",
     "@babel/plugin-proposal-throw-expressions": "~7.12.13",
     "@babel/plugin-syntax-dynamic-import": "~7.8.3",
-    "@babel/plugin-transform-runtime": "~7.13.10",
-    "@babel/preset-env": "~7.13.12",
+    "@babel/plugin-transform-runtime": "~7.13.15",
+    "@babel/preset-env": "~7.13.15",
     "@babel/preset-react": "~7.13.13",
     "@babel/register": "~7.13.14",
     "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
@@ -100,7 +101,7 @@
     "@types/react": "^17.0.3",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.3",
-    "@types/react-helmet": "^6.1.0",
+    "@types/react-helmet": "^6.1.1",
     "@types/react-qr-reader": "^2.1.3",
     "@types/react-redux": "^7.1.16",
     "@types/react-redux-i18n": "0.0.11",
@@ -109,9 +110,8 @@
     "@types/redux-logger": "^3.0.8",
     "@types/semver": "7.3.4",
     "@types/zxcvbn": "4.4.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "autoprefixer": "^10.2.5",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "buffer": "6.0.3",
     "clean-webpack-plugin": "~3.0.0",
@@ -119,22 +119,22 @@
     "core-js": "^3.10.1",
     "cross-env": "^7.0.3",
     "crypto-browserify": "3.12.0",
-    "css-loader": "~5.2.0",
-    "cssnano": "~4.1.11",
+    "css-loader": "~5.2.1",
+    "cssnano": "~5.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.1",
-    "eslint": "^7.23.0",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "~14.2.1",
     "eslint-config-airbnb-typescript": "~12.3.1",
     "eslint-config-prettier": "~8.1.0",
     "eslint-import-resolver-alias": "~1.1.2",
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-jsx-a11y": "~6.4.1",
-    "eslint-plugin-react": "~7.23.1",
+    "eslint-plugin-react": "~7.23.2",
     "eslint-plugin-react-hooks": "~4.2.0",
     "eslint-webpack-plugin": "~2.5.3",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "~6.2.0",
+    "fork-ts-checker-webpack-plugin": "~6.2.1",
     "html-loader": "~1.3.2",
     "html-webpack-plugin": "~5.3.1",
     "image-minimizer-webpack-plugin": "2.2.0",
@@ -148,7 +148,7 @@
     "npm": "^6.14.12",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "~0.12.7",
-    "postcss": "8.2.9",
+    "postcss": "8.2.10",
     "postcss-loader": "^5.2.0",
     "prettier": "^2.2.1",
     "process": "0.11.10",
@@ -166,7 +166,7 @@
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
-    "webpack": "5.31.0",
+    "webpack": "5.31.2",
     "webpack-bundle-analyzer": "~4.4.0",
     "webpack-cli": "4.6.0",
     "webpack-dev-server": "^3.11.2",
