feat: BTC SPV wallet (#779)
* feat: initial commit for balances

* feat: get spv balance

* feat: add balance poll for SPV

* chore: bump packages

* feat: add token list

* feat: tooltip

* feat: replace DEX icon

* feat: bg and DST badge

* feat: hash BTC SPV Symbol

* chore: bump packages

* feat: send and receive icons

* feat: balance info modal

* feat: receive addresses display

* chore: bump package

* fix: history

* feat: generate receive address

* feat: send BTC

* feat: add validation for receiving address

* chore: bump ts-loader

* feat: balance update

* feat: token list update

* chore: bump

* fix: ui updates

* fix: codacy

* chore: bump

* chore: bump packages

* chore: bump ain

* fix: hide cancel request for SPV

* fix: update popup text

* feat: spv send btc

* chore: bump packages

* fix: error message wrapping

* feat: update node version and snapshot update

* chore: bump packages

* feat: initial commit for display name

* feat: update snapshot to 819745

* chore: bump snapshot 822754

* chore: bump app to 2.3.4-rc.1

* feat: added chinese urls for telegram and url links

* feat: bump block

* feat: bump node to 1.6.4

* chore: bump packages

* chore: updated snapshot to 828899

* feat: retry and delay for send spv

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.3.3",
+  "version": "2.3.4-rc.1",
   "description": "DeFi Wallet",
   "main": "./electron-app/build/electron-app/index.js",
   "author": {
@@ -10,7 +10,7 @@
   },
   "homepage": "https://github.com/DeFiCh/app",
   "publicPath": "./",
-  "ainVersion": "1.6.2",
+  "ainVersion": "1.6.4",
   "scripts": {
     "init": "npm ci && cd webapp && npm run init",
     "transpile": "tsc --p tsconfig.json && tspr --tsConfig tsconfig.json",
@@ -54,14 +54,14 @@
     "base-64": "^1.0.0",
     "bignumber.js": "^9.0.1",
     "bip32": "^2.0.6",
-    "bip39": "^3.0.3",
+    "bip39": "^3.0.4",
     "bitcoinjs-lib": "^5.2.0",
     "commander": "^7.2.0",
     "crypto-js": "^4.0.0",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.3.0",
     "electron-debug": "^3.2.0",
-    "electron-log": "^4.3.4",
+    "electron-log": "^4.3.5",
     "electron-progressbar": "^2.0.0",
     "electron-root-path": "^1.0.16",
     "electron-updater": "4.3.8",
@@ -71,7 +71,7 @@
     "ini": "^2.0.0",
     "lodash": "^4.17.21",
     "loglevel": "^1.7.1",
-    "node-disk-info": "1.2.0",
+    "node-disk-info": "1.3.0",
     "os": "^0.1.1",
     "os-name": "4.0.0",
     "prop-types": "^15.7.2",
@@ -86,21 +86,21 @@
     "@babel/preset-typescript": "^7.13.0",
     "@electron/typescript-definitions": "^8.9.4",
     "@types/auto-launch": "^5.0.1",
-    "@types/base-64": "^0.1.3",
+    "@types/base-64": "^1.0.0",
     "@types/crypto-js": "^4.0.1",
     "@types/ini": "^1.3.30",
     "@types/node": "14.14.41",
     "@types/random-string": "0.0.28",
-    "@types/semver": "7.3.4",
+    "@types/semver": "7.3.5",
     "@types/utf8": "^2.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "6.0.2",
     "cross-env": "7.0.3",
-    "electron": "12.0.5",
-    "electron-builder": "22.10.5",
+    "electron": "12.0.6",
+    "electron-builder": "22.11.1",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "1.0.0",
     "eslint": "^7.25.0",
