--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.3.3",
+  "version": "2.3.4-rc.1",
   "description": "DeFi Wallet",
   "author": {
     "name": "DeFiChain Foundation",
@@ -30,19 +30,19 @@
     }
   },
   "dependencies": {
-    "ajv": "^8.1.0",
+    "ajv": "^8.2.0",
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
-    "bip39": "^3.0.3",
+    "bip39": "^3.0.4",
     "bitcoinjs-lib": "^5.2.0",
     "bootstrap": "^4.6.0",
-    "comma-number": "^2.0.1",
-    "convict": "^6.0.1",
+    "comma-number": "^2.1.0",
+    "convict": "^6.1.0",
     "crypto-js": "^4.0.0",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.3.0",
-    "electron-log": "^4.3.4",
+    "electron-log": "^4.3.5",
     "http-status-codes": "^2.1.4",
     "is-electron": "^2.2.0",
     "lodash": "^4.17.21",
@@ -59,7 +59,7 @@
     "react-dom": "^17.0.2",
     "react-ellipsis-text": "1.2.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "7.3.3",
+    "react-hook-form": "7.4.0",
     "react-icons": "^4.2.0",
     "react-md-spinner": "^1.0.0",
     "react-number-format": "4.5.5",
@@ -79,7 +79,7 @@
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.13.16",
+    "@babel/core": "~7.14.0",
     "@babel/eslint-parser": "7.13.14",
     "@babel/plugin-proposal-class-properties": "~7.13.0",
     "@babel/plugin-proposal-export-default-from": "^7.12.13",
@@ -88,16 +88,16 @@
     "@babel/plugin-proposal-throw-expressions": "~7.12.13",
     "@babel/plugin-syntax-dynamic-import": "~7.8.3",
     "@babel/plugin-transform-runtime": "~7.13.15",
-    "@babel/preset-env": "~7.13.15",
+    "@babel/preset-env": "~7.14.1",
     "@babel/preset-react": "~7.13.13",
     "@babel/register": "~7.13.16",
     "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
     "@reduxjs/toolkit": "^1.5.1",
     "@storybook/preset-typescript": "^3.0.0",
     "@types/enzyme": "^3.10.8",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.3",
+    "@types/react": "^17.0.5",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.1",
@@ -107,7 +107,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-transition-group": "^4.4.1",
     "@types/redux-logger": "^3.0.8",
-    "@types/semver": "7.3.4",
+    "@types/semver": "7.3.5",
     "@types/zxcvbn": "4.4.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "autoprefixer": "^10.2.5",
@@ -115,11 +115,11 @@
     "buffer": "6.0.3",
     "clean-webpack-plugin": "~3.0.0",
     "copy-webpack-plugin": "~8.1.1",
-    "core-js": "^3.11.0",
+    "core-js": "^3.11.3",
     "cross-env": "^7.0.3",
     "crypto-browserify": "3.12.0",
     "css-loader": "~5.2.4",
-    "cssnano": "~5.0.1",
+    "cssnano": "~5.0.2",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.25.0",
@@ -133,7 +133,7 @@
     "eslint-plugin-react-hooks": "~4.2.0",
     "eslint-webpack-plugin": "~2.5.4",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "~6.2.5",
+    "fork-ts-checker-webpack-plugin": "~6.2.6",
     "html-loader": "~1.3.2",
     "html-webpack-plugin": "~5.3.1",
     "image-minimizer-webpack-plugin": "2.2.0",
@@ -143,29 +143,29 @@
     "import-sort-style-module-and-prefix": "~0.1.3",
     "install": "^0.13.0",
     "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.5.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "npm": "^6.14.13",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "~0.12.7",
-    "postcss": "8.2.12",
+    "postcss": "8.2.14",
     "postcss-loader": "^5.2.0",
     "prettier": "^2.2.1",
     "process": "0.11.10",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "^17.0.2",
     "regenerator-runtime": "~0.13.7",
-    "resolve-url-loader": "3.1.2",
-    "sass": "1.32.11",
+    "resolve-url-loader": "3.1.3",
+    "sass": "1.32.12",
     "sass-loader": "^11.0.1",
     "stream-browserify": "3.0.0",
     "style-loader": "~2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "ts-jest": "^26.5.5",
-    "ts-loader": "^9.1.1",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^9.1.2",
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
-    "webpack": "5.35.1",
+    "webpack": "5.36.2",
     "webpack-bundle-analyzer": "~4.4.1",
     "webpack-cli": "4.6.0",
     "webpack-dev-server": "^3.11.2",
