feat: add SPV Wallet (#836)
* feat: spv changes

* chore: RC v2.3.5-rc.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.3.4",
+  "version": "2.3.5-rc.1",
   "description": "DeFi Wallet",
   "main": "./electron-app/build/electron-app/index.js",
   "author": {
