--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.3.4",
+  "version": "2.3.5-rc.2",
   "description": "DeFi Wallet",
   "author": {
     "name": "DeFiChain Foundation",
@@ -133,7 +133,7 @@
     "eslint-plugin-react-hooks": "~4.2.0",
     "eslint-webpack-plugin": "~2.5.4",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "~6.2.6",
+    "fork-ts-checker-webpack-plugin": "~6.2.7",
     "html-loader": "~1.3.2",
     "html-webpack-plugin": "~5.3.1",
     "image-minimizer-webpack-plugin": "2.2.0",
