chore: bump to 2.3.5

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.3.5-rc.2",
+  "version": "2.3.5",
   "description": "DeFi Wallet",
   "author": {
     "name": "DeFiChain Foundation",
