--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.3.5",
+  "version": "2.4.0-rc.1",
   "description": "DeFi Wallet",
   "main": "./electron-app/build/electron-app/index.js",
   "author": {
@@ -10,7 +10,7 @@
   },
   "homepage": "https://github.com/DeFiCh/app",
   "publicPath": "./",
-  "ainVersion": "1.6.4",
+  "ainVersion": "1.7.0",
   "scripts": {
     "init": "npm ci && cd webapp && npm run init",
     "transpile": "tsc --p tsconfig.json && tspr --tsConfig tsconfig.json",
@@ -93,17 +93,17 @@
     "@types/random-string": "0.0.28",
     "@types/semver": "7.3.6",
     "@types/utf8": "^2.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
-    "concurrently": "6.1.0",
+    "concurrently": "6.2.0",
     "cross-env": "7.0.3",
-    "electron": "12.0.8",
+    "electron": "13.0.0",
     "electron-builder": "22.10.5",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "1.0.0",
-    "eslint": "^7.26.0",
+    "eslint": "^7.27.0",
     "file-loader": "^6.2.0",
     "husky": "^4.3.8",
     "install": "^0.13.0",
