--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.3.5",
+  "version": "2.4.0-rc.1",
   "description": "DeFi Wallet",
   "author": {
     "name": "DeFiChain Foundation",
@@ -133,7 +133,7 @@
     "eslint-plugin-react-hooks": "~4.2.0",
     "eslint-webpack-plugin": "~2.5.4",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "~6.2.9",
+    "fork-ts-checker-webpack-plugin": "~6.2.10",
     "html-loader": "~2.1.2",
     "html-webpack-plugin": "~5.3.1",
     "image-minimizer-webpack-plugin": "2.2.0",
@@ -164,7 +164,7 @@
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
-    "webpack": "5.37.0",
+    "webpack": "5.37.1",
     "webpack-bundle-analyzer": "~4.4.2",
     "webpack-cli": "4.7.0",
     "webpack-dev-server": "^3.11.2",
