chore: bump app to 2.4.0 and updated snapshot index (#885)
* chore: bump packages

* chore: text

* update size

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.4.0-rc.4",
+  "version": "2.4.0",
   "description": "DeFi Wallet",
   "author": {
     "name": "DeFiChain Foundation",
