--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.4.0",
+  "version": "2.4.1-rc.1",
   "description": "DeFi Wallet",
   "author": {
     "name": "DeFiChain Foundation",
