--- a/webapp/package.json
+++ b/webapp/package.json
@@ -33,6 +33,7 @@
     "ajv": "^8.5.0",
     "async": "^3.2.0",
     "axios": "^0.21.1",
+    "axios-cache-adapter": "2.7.3",
     "bignumber.js": "^9.0.1",
     "bip39": "^3.0.4",
     "bitcoinjs-lib": "^5.2.0",
