--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
+
       - name: Get App Version
         uses: nyaayaya/package-version@05847b5b2b4e8cefeca8d50ee5940a6445a5773a
 
@@ -28,6 +32,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
 
       - name: Get App Version
         uses: nyaayaya/package-version@05847b5b2b4e8cefeca8d50ee5940a6445a5773a
@@ -53,6 +61,10 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
 
       - name: Get App Version
         uses: nyaayaya/package-version@05847b5b2b4e8cefeca8d50ee5940a6445a5773a
