--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
+
       - name: install dependencies
         run: npm cache clean --force && npm run init
 
@@ -27,6 +31,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
 
       - name: Get App Version
         uses: nyaayaya/package-version@05847b5b2b4e8cefeca8d50ee5940a6445a5773a
@@ -65,6 +73,10 @@ jobs:
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
+
       - name: install dependencies
         run: npm cache clean --force && npm run init
 
@@ -87,6 +99,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
 
       - name: Get App Version
         uses: nyaayaya/package-version@05847b5b2b4e8cefeca8d50ee5940a6445a5773a
@@ -125,6 +141,10 @@ jobs:
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
+
       - name: install dependencies
         run: npm cache clean --force && npm run init
 
@@ -142,6 +162,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
+
+      - uses: actions/setup-node@46071b5c7a2e0c34e49c3cb8a0e792e86e18d5ea
+        with:
+          node-version: 15
 
       - name: Get App Version
         uses: nyaayaya/package-version@05847b5b2b4e8cefeca8d50ee5940a6445a5773a
