--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "homepage": "https://github.com/DeFiCh/app",
   "publicPath": "./",
-  "ainVersion": "1.7.6",
+  "config": {
+    "ainVersion": "1.7.6"
+  },
   "scripts": {
     "init": "npm ci && cd webapp && npm run init",
     "transpile": "tsc --p tsconfig.json && tspr --tsConfig tsconfig.json",
@@ -23,9 +25,9 @@
     "start:electron-url": "export ELECTRON_START_URL=http://localhost:5000 && electron --inspect .",
     "electron": "npm run transpile && cross-env NODE_ENV=development electron --inspect . -d true",
     "build:react": "cd webapp && npm run build:react",
-    "pre:build:linux": "sh pre-build-linux.sh $npm_package_ainVersion",
-    "pre:build:mac": "sh pre-build-mac.sh $npm_package_ainVersion",
-    "pre:build:win": "pre-build-win.cmd %npm_package_ainVersion%",
+    "pre:build:linux": "sh pre-build-linux.sh $npm_package_config_ainVersion",
+    "pre:build:mac": "sh pre-build-mac.sh $npm_package_config_ainVersion",
+    "pre:build:win": "pre-build-win.cmd %npm_package_config_ainVersion%",
     "build:electron": "npm run build:react && npm run transpile:prod && npm run set_env:prod",
     "build": "npm run build:electron && electron-builder",
     "build:all": "npm run build:electron && electron-builder -mwl",
@@ -33,8 +35,6 @@
     "build:mac": "npm run pre:build:mac && npm run build:electron && electron-builder --mac -p never",
     "build:win": "npm run pre:build:win && npm run build:electron && electron-builder --win -p never",
     "pack": "npm run build:electron && electron-builder --dir",
-    "lint": "tslint --project tsconfig.json --config tslint.json",
-    "lint:webapp": "tslint -p webapp/tsconfig.json -c tslint.json",
     "postinstall": "electron-builder install-app-deps",
     "publish": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder build -p always",
     "test:react": "cd webapp/ && npm run test",
@@ -89,30 +89,29 @@
     "@types/base-64": "^1.0.0",
     "@types/crypto-js": "^4.0.1",
     "@types/ini": "^1.3.30",
-    "@types/node": "14.14.41",
+    "@types/node": "15.12.0",
     "@types/random-string": "0.0.28",
     "@types/semver": "7.3.6",
     "@types/utf8": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "6.2.0",
     "cross-env": "7.0.3",
-    "electron": "13.0.1",
-    "electron-builder": "22.10.5",
+    "electron": "13.1.0",
+    "electron-builder": "22.11.5",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "1.0.0",
     "eslint": "^7.27.0",
     "file-loader": "^6.2.0",
     "husky": "^4.3.8",
     "install": "^0.13.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.4",
     "lint-staged": "^11.0.0",
-    "npm": "^6.14.13",
+    "npm": "^7.16.0",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.2.4"
   },
   "build": {
@@ -187,6 +186,6 @@
     }
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=15"
   }
 }
