--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.4.5",
+  "version": "2.5.0-rc.1",
   "description": "DeFi Wallet",
   "author": {
     "name": "DeFiChain Foundation",
@@ -60,7 +60,7 @@
     "react-hook-form": "7.8.1",
     "react-icons": "^4.2.0",
     "react-md-spinner": "^1.0.0",
-    "react-number-format": "4.6.0",
+    "react-number-format": "4.6.1",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.4",
     "react-redux-i18n": "^1.9.3",
@@ -89,7 +89,7 @@
     "@babel/preset-react": "~7.13.13",
     "@babel/register": "~7.13.16",
     "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
-    "@reduxjs/toolkit": "^1.5.1",
+    "@reduxjs/toolkit": "^1.6.0",
     "@storybook/preset-typescript": "^3.0.0",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.23",
@@ -163,7 +163,7 @@
     "url-loader": "^4.1.1",
     "webpack": "5.38.1",
     "webpack-bundle-analyzer": "~4.4.2",
-    "webpack-cli": "4.7.0",
+    "webpack-cli": "4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
   }
