--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.5.0-rc.1",
+  "version": "2.5.0-alpha.1",
   "description": "DeFi Wallet",
   "main": "./electron-app/build/electron-app/index.js",
   "author": {
@@ -86,12 +86,12 @@
     "@types/base-64": "^1.0.0",
     "@types/crypto-js": "^4.0.1",
     "@types/ini": "^1.3.30",
-    "@types/node": "15.12.1",
+    "@types/node": "15.12.2",
     "@types/random-string": "0.0.28",
     "@types/semver": "7.3.6",
     "@types/utf8": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "6.2.0",
