--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-wallet",
-  "version": "2.5.0-rc.1",
+  "version": "2.5.0-alpha.1",
   "description": "DeFi Wallet",
   "author": {
     "name": "DeFiChain Foundation",
@@ -57,7 +57,7 @@
     "react-dom": "^17.0.2",
     "react-ellipsis-text": "1.2.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "7.8.1",
+    "react-hook-form": "7.8.2",
     "react-icons": "^4.2.0",
     "react-md-spinner": "^1.0.0",
     "react-number-format": "4.6.1",
